# Sjaldersbaum

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  install_win64.ps1
Sjaldersbaum/: Sjaldersbaum.rc  resource.h
Sjaldersbaum/resources/levels/: menu.yaml  tutorial.yaml
Sjaldersbaum/resources/levels/main_tasks/: coins.yaml  cryptarithms.yaml  data_analysis.yaml  fibonacci.yaml  foreword.yaml  functions.yaml  thank_you.yaml
Sjaldersbaum/resources/reminders/: cheatsheet.txt  gimp.txt  helper.py  reminder_light.MID  solutions.txt
Sjaldersbaum/resources/shaders/: alpha.vert  lantern.frag  lantern_baw.frag  lantern_party.frag  lantern_tutorial.frag
Sjaldersbaum/resources/textures/images/: clipnote.xcf  cpp.xcf  cryptarithm_example.xcf  envelope_closed_cover.xcf  envelope_open_cover.xcf  fibonacci.xcf  pi.xcf  sfml.xcf  sjaldersbaum_logo.xcf  solved.xcf
Sjaldersbaum/resources/textures/objects/: A4_lined.xcf  A4_lined_alt.xcf  A4_lined_old_1.xcf  A4_lined_old_2.xcf  A4_plain.xcf  A4_plain_old_1.xcf  A4_plain_old_2.xcf  (+11 more)
Sjaldersbaum/source/: animations.cpp  animations.h  app.cpp  app.h  app_settings.cpp  app_settings.h  audio.cpp  audio.h  camera.cpp  camera.h  colors.cpp  colors.h  commands.cpp  commands.h  contains.h  convert.h  crosshair.cpp  crosshair.h  cursor.cpp  cursor.h  debug_cl.cpp  debug_cl.h  debug_log.cpp  debug_log.h  debug_window.cpp  debug_window.h  elements.cpp  elements.h  entity.cpp  entity.h  events-requests.h  fps_display.cpp  fps_display.h  game.cpp  game.h  highlight.cpp  highlight.h  hoverable_detail.h  indicator.cpp  indicator.h  (+41 more)
(+14 files in other folders)
